2004-08-13 19:21  Albrecht Dreß <albrecht.dress@arcor.de>

	* libbalsa/gmime-gpgme-context.c: plug leaks.

2004-08-12  Pawel Salek

	* libbalsa/imap-server.c: do not set key for unitialized object.
	* src/balsa-index.c (balsa_index_selected_list): ref current
	message as all others.

2004-08-12 20:22  PeterB

	* libbalsa/: mailbox.c, message.c: plug leaks.
	* libbalsa/: mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c: cache
	mtimes on first check instead of making careful check.
	* libbalsa/folder-scanners.c, libbalsa/folder-scanners.h,
	src/mailbox-node.c: pass mailbox type to mailbox-handler to avoid
	duplicate call to libbalsa_mailbox_type_from_path.
	* libbalsa/message.c: ignore error return caused by malformed
	header.

2004-08-11  Pawel Salek

	* libbalsa/address-book.c: modify_address not only updates backend
	data but also changes the address itself.
	* libbalsa/address.[hc]: add set_copy() method.
	* src/ab-main.c: make it work (probably has full functionality for
	ldap).

2004-08-10 09:00  PeterB

	* src/: balsa-mblist.c, mailbox-node.c, mailbox-node.h,
	save-restore.c: drop BalsaMailboxNode::expanded; use
	libbalsa_mailbox_get_exposed to decide whether to expand rows.
	* libbalsa/information.c: use one idle handler instead of four;
	check for NULL format string.

2004-08-08  Pawel Salek

	* libbalsa/imap-server.c: failed keep-alives are uninteresting.
	* libbalsa/imap/imap-commands.c: re-select message correctly.
	* src/Makefile.am: mark built sources correctly.
	* src/main.c: fix periodic expunge code.
	* src/sendmsg-window.c: remove '\n' added by ctime_r().

2004-08-08  Carlos Morgado  <chbm gnome.org>

	* src/main-window.c (show_about_box): update my email
	* libbalsa/rfc3156.c: unduplicate message

2004-08-08  Pawel Salek

	* NEWS, configure.in: release 2.2.2.
	* src/save-restore.c: switch SMTP TLS on if available.
	* src/main-window.c: menu item numbering fixes.
	* libbalsa/mailbox.h: mailbox is open even when eg. TREECLEANING.