@@ -1,3 +1,12 @@
+2004-08-14  Pawel Salek
+
+	* libbalsa/address-book-ldap.c: cleanup v3 recognition and error
+	reporting.
+	* libbalsa/address-book-{vcard,ldif}.c: use filter parameter.
+	* libbalsa/address.c: provide sensible edit widget for NULL address.
+	* src/ab-main.c: next series of fixes.
+	* src/sendmsg-window.c: D&D files to compose window.
+
 2004-08-13 19:21  Albrecht Dreß <albrecht.dress@arcor.de>
 
 	* libbalsa/gmime-gpgme-context.c: plug leaks.
